Add french translation and strings improvements (#49)
Reusing work done on strings.json done in #37

--- a/custom_components/integration_blueprint/translations/en.json
+++ b/custom_components/integration_blueprint/translations/en.json
@@ -1,6 +1,5 @@
 {
     "config": {
-        "title": "Blueprint",
         "step": {
             "user": {
                 "title": "Blueprint",
@@ -15,7 +14,7 @@
             "auth": "Username/Password is wrong."
         },
         "abort": {
-            "single_instance_allowed": "Only a single configuration of Blueprint is allowed."
+            "single_instance_allowed": "Only a single instance is allowed."
         }
     },
     "options": {
