--- a/custom_components/integration_blueprint/translations/nb.json
+++ b/custom_components/integration_blueprint/translations/nb.json
@@ -1,6 +1,5 @@
 {
     "config": {
-        "title": "Blueprint",
         "step": {
             "user": {
                 "title": "Blueprint",
@@ -15,7 +14,7 @@
             "auth": "Brukernavn/Passord er feil."
         },
         "abort": {
-            "single_instance_allowed": "Du kan konfigurere Blueprint kun en gang."
+            "single_instance_allowed": "Denne integrasjonen kan kun konfigureres en gang."
         }
     },
     "options": {
