--- a/custom_components/lightener/translations/en.json
+++ b/custom_components/lightener/translations/en.json
@@ -11,12 +11,28 @@
           "name": "The goal is making it obvious which group of lights is controlled by this device. Usually it's an area/room name, like \"Living Room\" but it can be anything"
         }
       }
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Controlled lights",
+        "data": {
+          "controlled_entities": "Select the light entities to be controlled by this Lightener device"
+        }
+      },
+      "light_configuration": {
+        "title": "\"{light_name}\" configuration",
+        "data": {
+          "brightness": "Brightness mapping"
+        },
+        "data_description": {
+          "brightness": "A list mapping the brightness of this light when the Lightener reaches certain brightness levels. Each line has the format (Lightner brightness %): (Controlled light brightness %). For example, \"60:100\" specifies that when the Lightener reaches 60% of brightness \"{light_name}\" will reach 100%"
+        }
+      }
     },
     "error": {
-      "name_used": "The provided name is already in use by another light"
-    },
-    "abort": {
-      "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
+      "invalid_brightness": "Invalid brightness mapping configuration \"{error_entry}\". Each line must have the format \"(number from 1 to 100): (number from 0 to 100)\". For example \"40: 100\""
     }
   }
 }
