--- a/custom_components/lightener/translations/en.json
+++ b/custom_components/lightener/translations/en.json
@@ -10,6 +10,21 @@
         "data_description": {
           "name": "The goal is making it obvious which group of lights is controlled by this device. Usually it's an area/room name, like \"Living Room\" but it can be anything"
         }
+      },
+      "lights": {
+        "title": "Controlled lights",
+        "data": {
+          "controlled_entities": "Select the light entities to be controlled by this Lightener device"
+        }
+      },
+      "light_configuration": {
+        "title": "\"{light_name}\" configuration",
+        "data": {
+          "brightness": "Brightness mapping"
+        },
+        "data_description": {
+          "brightness": "A list mapping the brightness of this light when the Lightener reaches certain brightness levels. Each line has the format (Lightner brightness %): (Controlled light brightness %). For example, \"60:100\" specifies that when the Lightener reaches 60% of brightness \"{light_name}\" will reach 100%"
+        }
       }
     }
   },
