Show the current brightness level in the config flow

--- a/custom_components/lightener/translations/sk.json
+++ b/custom_components/lightener/translations/sk.json
@@ -19,6 +19,7 @@
       },
       "light_configuration": {
         "title": "Konfigurovať \"{light_name}\"",
+        "description": "Current brightness: {current_brightness}",
         "data": {
           "brightness": "Mapovanie jasu"
         },
@@ -42,6 +43,7 @@
       },
       "light_configuration": {
         "title": "Konfigurovať \"{light_name}\"",
+        "description": "Current brightness: {current_brightness}",
         "data": {
           "brightness": "Mapovanie jasu"
         },
