--- a/custom_components/lightener/translations/en.json
+++ b/custom_components/lightener/translations/en.json
@@ -19,6 +19,7 @@
       },
       "light_configuration": {
         "title": "Configure \"{light_name}\"",
+        "description": "Current brightness: {current_brightness}",
         "data": {
           "brightness": "Brightness mapping"
         },
@@ -42,6 +43,7 @@
       },
       "light_configuration": {
         "title": "Configure \"{light_name}\"",
+        "description": "Current brightness: {current_brightness}",
         "data": {
           "brightness": "Brightness mapping"
         },
